# claude_guardian

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  BACKEND_LIFECYCLE_ANALYSIS.md  BACKEND_MANAGEMENT_IMPROVEMENTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_SETUP.md  CLAUDE_GUARDIAN_API_PERFORMANCE_REPORT.md  CLAUDE_GUARDIAN_PERFORMANCE_REPORT.md  COMPREHENSIVE_BENCHMARK_REPORT.md  CRITICAL_FALSE_POSITIVE_FIXES_APPLIED.md  DEPLOYMENT_GUIDE.md  EMERGENCY_ROLLBACK_PROCEDURES.md  FIXES_APPLIED.md  GETTING_STARTED.md  GUARDIAN_COMPLETE_SYSTEM_REPORT.md  GUARDIAN_EVOLUTION_COMPLETE_ANALYSIS.md  GUARDIAN_EVOLUTION_REPORT.md  HARMONIZATION_FINAL_REPORT.md  INSTALLATION_NOTES.md  LICENSE  MCP_SERVER_IMPROVEMENTS.md  PERFORMANCE_BENCHMARKS.md  PHASE_0_VALIDATION_LOG.md  PHASE_1B_ASSESSMENT.md  PHASE_5_CONFIGURATION_OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.3.2.md  RELEASE_NOTES_v2.0.0-alpha.md  REPOSITORY_HARMONIZATION_COMPLETE.md  ROLLBACK_PROCEDURES.md  SETUP_README.md  (+33 more)
.claude/: settings.local 2.json  settings.local 3.json
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  health-check.yml  release.yml  security-scan.yml  security.yml
.github/workflows-disabled/: release.yml  security.yml
cmd/auth-service/: main.go
cmd/config-service/: main.go
cmd/detection-engine/: main.go
cmd/gateway/: main.go
cmd/monitoring-service/: main.go
config/: claude-code-config.json  claude-code-mcp-config.json  mcp-server-config.json  redis.conf  security-tools-registry.json
config-backup-20250828-122131/: .env.example  docker-compose.dev.yaml  docker-compose.yml
config/docker-compose/: docker-compose.dev.yaml  docker-compose.yml
config/environments/: development.yaml  production.yaml  staging.yaml
config/monitoring/: prometheus.yml
config/security/: security_policy.yaml
config/templates/: .env.template
deployments/databases/: init-postgres.sql
deployments/docker/: Dockerfile  healthcheck.py
deployments/kubernetes/: phase-2-services.yaml
deployments/production/: .env.template  README.md  cg.dockerfile  claude-guardian-mcp.dockerfile  docker-compose.production.yml  start.sh
dev-archives/: README.md
dev-archives/benchmarks/: CLAUDE_GUARDIAN_FINAL_REPORT.md  PERSISTENCE_STATUS.md  REBENCH_SUMMARY.md  benchmark-suite.py  rebench.py
dev-archives/dev-scripts/: enhanced_security_scanner.py  phase_1a_conservative_scanner.py  phase_1c_simplified.py  sequential_improvement_validator.py  test_session_storage.py  test_vector_graph_correlation.py
dev-archives/docker-configurations/: README.md
dev-archives/documentation/: CLEANUP_PHASE1_SAFETY_REPORT.md  DEVELOPMENT_STATUS.md  SECURITY_TESTING_REPORT.md  VALIDATION_CHECKLIST.md
dev-archives/documentation-drafts/: COMPLETE_FRAMEWORK_ANALYSIS.md  CORRECTED_REALITY_CHECK.md  FINAL_GO_INTEGRATION_ASSESSMENT.md  FINAL_SYSTEM_REALITY.md  LIGHTRAG_CORRELATION_ANALYSIS.md  REALITY_CHECK.md  VERSION_2.0_ROADMAP.md
dev-archives/duplicate-clone-analysis/: README.md  simple-test.go  test-integration.go
dev-archives/go-services-exploration/: README.md
dev-archives/legacy-reports/: DOCKER_COMPOSE_ANALYSIS.md  DOCUMENTATION_COVERAGE_REPORT.md  FINAL_IMPROVEMENT_ASSESSMENT.md  LIFECYCLE_SCRIPTS_ANALYSIS.md  PHASE_1B_SUCCESS_REPORT.md  REPOSITORY_CLEANUP_ANALYSIS.md  SEQUENTIAL_IMPROVEMENT_ROADMAP.md  correlation-test.py  test-persistence.sh  test-three-way-integration.py
dev-legacy/docs/: README.md  index.md
dev-scripts/: evolution_benchmark.py  phase_1a_optimized_scanner.py  phase_1b_targeted_patterns.py  phase_1c_data_flow.py  test_false_positive_improvements.py  test_multi_session.py
development-artifacts/: README.md
development-artifacts/phase-descriptions/: PHASE_1_ARCHITECTURE_VERIFICATION_REPORT.md
development-artifacts/reports/: COMPREHENSIVE_SYSTEM_VERIFICATION_REPORT.md  FINAL_MCP_VERIFICATION_SUMMARY.md  MCP_INTEGRATION_TEST_RESULTS.md  (+1 more)
docs/: Makefile  README.md  conf.py
migrations/: 001_create_users.down.sql  001_create_users.up.sql  alembic.ini
scripts/: ast_foundation_enhancement.py  comprehensive_improvement_analysis.py  guardian-backend  guardian-mcp  init-db.sql  lightrag_integration.py  phase_1b_final.py  phase_1b_selective_patterns.py  phase_1b_targeted_patterns.py  start-mcp-service.py  test-mcp-integration.sh  test-setup.py  test_false_positives.py  test_full_stack.py  test_multi_session.py  test_security_effectiveness.py  test_vector_graph_correlation.py  validate-env.py  validate-mcp-tools.py  version.py
tests/: __init__.py  conftest.py
(+78 files in other folders)
